have to style allEvent css

--- a/volunteer-app-master/volunteer-app-master/src/components/Event/Event.css
+++ b/volunteer-app-master/volunteer-app-master/src/components/Event/Event.css
@@ -15,7 +15,7 @@
 #event .input-container input{
   width: 25rem;
   padding: .8rem .9rem;
-  color: #D6D6D6;
+  color: #333;
   border-radius: 8px 0px 0px 8px;
   outline: none;
   border: none;
